--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name    = "phonenumber"
 version = "0.3.1+8.12.9"
-edition = "2018"
+edition = "2021"
+rust-version = "1.58.0"
 
 authors = ["meh. <meh@1aim.com>"]
 license = "Apache-2.0"
