--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,16 +23,14 @@ itertools   = "0.10"
 either      = "1.8"
 nom         = "7.1"
 
-serde        = "1.0"
-serde_derive = "1.0"
+serde        = { version = "1.0", features = ["derive"] }
 bincode      = "1.3"
 
 [build-dependencies]
 quick-xml    = "0.28"
 thiserror    = "1.0"
 regex        = "1.7"
-serde        = "1.0"
-serde_derive = "1.0"
+serde        = { version = "1.0", features = ["derive"] }
 bincode      = "1.3"
 
 [dev-dependencies]
